fix(#581): truncate dialog title when it's too long

--- a/packages/veui-theme-one/components/dialog.less
+++ b/packages/veui-theme-one/components/dialog.less
@@ -52,10 +52,6 @@
       padding: 0 20px;
     }
 
-    &-head {
-      .centered-line(56px);
-    }
-
     &-head-title,
     &-head-close,
     &-head-close:hover {
@@ -66,6 +62,9 @@
       margin: 0;
       font-weight: @veui-font-weight-normal;
       font-size: @veui-font-size-large;
+      padding-right: 12px;
+      .centered-line(56px);
+      .ellipsis();
     }
 
     &-head-close {
